chore(index.html): change the class name to 'container'

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Chuck Norris Jokes</title>
   </head>
   <body>
-    <main class="main"></main>
+    <main class="container"></main>
     <noscript>Activate the javascript</noscript>
     <script src="src/js/script.js"></script>
   </body>
